# simple-admin

./: .gitignore  Cargo.toml  README.md  Trunk.toml  config-example.toml  config.toml  package-lock.json  package.json  tailwind.config.js
database/: schema.sql
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/config/: database.rs  email.rs  jwt.rs  mod.rs
server/src/entities/: api.rs  role.rs  role_apis.rs  user.rs
server/src/errors/: database.rs  mod.rs  roles.rs  user.rs
server/src/global/: mod.rs  redis_adaptor.rs
server/src/global/email/: gmail.rs  mod.rs
server/src/global/email/template/: mod.rs  register.html
server/src/middleware/: jwt.rs  mod.rs
server/src/models/: api.rs  auth.rs  mod.rs  response.rs  role.rs  user.rs
server/src/pkg/dictionary/: cookie.rs  mod.rs
server/src/routers/: api.rs  auth.rs  mod.rs  role.rs  user.rs
server/src/services/: api.rs  auth.rs  role.rs
src/: lib.rs  main.rs
src/config/: database.rs  mod.rs
src/entities/: api.rs  mod.rs  role.rs  user.rs  user_role.rs
src/errors/: api.rs  mod.rs  roles.rs  user.rs
src/middleware/: mod.rs
src/models/: api.rs  mod.rs  role.rs  user.rs
src/repo/: user.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  main.rs  router.rs
web/src/apis/: api.rs  login.rs  mod.rs  role.rs  user.rs
web/src/components/: error.rs  mod.rs  pagination.rs
web/src/components/cards/: mod.rs  title_card.rs
web/src/components/input/: input_text.rs  mod.rs
web/src/components/notifications/: alert.rs  error.rs  info.rs  mod.rs  success.rs  warn.rs
web/src/components/page/: mod.rs  pagination.rs
web/src/components/typography/: error_text.rs  mod.rs  sub_title.rs
web/src/containers/: header.rs  layout.rs  left_siderbar.rs  mod.rs  modal_layout.rs  page_content.rs  right_siderbar.rs
web/src/element/: base.rs
web/src/features/: mod.rs
web/src/features/api/: mod.rs
web/src/features/common/: mod.rs  modal_slice.rs  notification_slice.rs  right_drawer_slice.rs
web/src/features/common/components/: confirmation_modal_body.rs  mod.rs  notification_body_right_drawer.rs
web/src/features/role/: mod.rs
web/src/features/user/: landing_intro.rs  login.rs  mod.rs  user_table.rs
web/src/features/user/components/: mod.rs
web/src/pages/: login.rs  mod.rs
web/src/pages/protected/: api.rs  mod.rs  not_found.rs  role.rs  user.rs  welcome.rs
web/src/routers/: index.rs  mod.rs  siderbar.rs
web/src/view/: login.rs
web/src/views/: api.rs  dashboard.rs  login.rs  mod.rs  not_found.rs  role.rs  user.rs
web/src/views/api/: api.rs  mod.rs
web/src/views/dashboard/: dashboard.rs
web/src/views/features/user/: landing_intro.rs  login.rs  mod.rs
web/src/views/features/user/components/: mod.rs  template_pointers.rs
web/src/views/login/: login.rs  mod.rs
web/src/views/pages/: login.rs  mod.rs
web/src/views/pages/protected/: mod.rs
web/src/views/role/: api.rs  mod.rs  role.rs
(+11 files in other folders)
