[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Wei.Ge <gwbiubiu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.8.0" }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toml = "0.8.19"
log = "0.4.22"
env_logger = "0.10"
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
sea-orm = { version = "1.0.0", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
thiserror = "1.0.63"
password-hash = "0.5.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
time = "0.3.36"
futures = "0.3.30"
http = "0.2.12"
actix-cors = "0.7.0"
redis = { version = "0.27.2", features = ["tokio-comp"] }
md5 = "0.7.0"
