[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Wei.Ge <gwbiubiu@gmail.com>"]

[dependencies]
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
yew = { version = "0.21.0", features = ["csr"] }
serde = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gloo = "0.11.0"
yew-router = "0.18.0"
yewdux = { version = "0.10.0", feature = "doctests", target_arch = "wasm32" }
yew-hooks = "0.3.2"
