[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Wei.Ge <gwbiubiu@gmail.com>"]

[dependencies]
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
serde = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gloo = "0.11.0"
yew-router = "0.18.0"
yewdux = { version = "0.10.0"}
yew-hooks = "0.3.2"
yew_icons = { version = "0.8.0", features = ["HeroiconsOutlineFaceFrown","LucideUsers", "LucideUserCog", "BootstrapRouter", "BootstrapMoon","BootstrapSun","BootstrapJustify", "BootstrapBell", "OcticonsX16","HeroiconsOutlineSquares2X2"] }
